--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -20,3 +20,8 @@ payment.signatureKey=ecom-123qwe!@#
 
 payment.processing.service.initiate.payment=http://localhost:8082/payments/status
 payment.processing.service.process.payment=http://localhost:8082/payments/process
+
+#Redis Configurations
+spring.redis.host=3.6.90.174
+spring.redis.port=6379
+spring.redis.password= # Leave empty if no password is set 
